--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ path = "src/main.rs"
 
 [dependencies]
 eframe = "0.10.0" # Gives us egui, epi and web+native backends
-
+rand = "0.8.0"
 serde = { version = "1", features = ["derive"], optional = true }
 
 [features]
