--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,9 @@ walkdir = "2"
 glob = "0.3.0"
 dirs = "3.0.1"
 directories = "3.0.1"
+wfd = "0.1.7"
+enum-iterator = "0.6.0"
+
 
 [features]
 default = ["persistence"]
